# Salto-Quantico-ID

./: .vercelignore  00_COMECE_AQUI.md  ARQUITETURA.md  CHECKLIST_FINAL.md  IMPLEMENTACAO_DASHBOARD.md  IMPLEMENTACAO_SIGNUP.md  INDICE_ARQUIVOS.md  INICIO_RAPIDO.md  README.md  README_DASHBOARD.md  RESUMO_FINAL.md  ROADMAP_MELHORIAS.md  TESTE_DASHBOARD.md  package-lock.json  render.yaml  vercel.json
backend/: app.py  database.sql  models.py  pyproject.toml  requirements.txt  routes.py
backend/instance/: salto_quantico.db
frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/app/: App.jsx
frontend/src/components/: ThemeToggle.css  ThemeToggle.jsx
frontend/src/components/common/Footer/: Footer.jsx
frontend/src/components/dashboard/: CreatePost.jsx  Feed.jsx  JobApplicationForm.jsx  JobPost.jsx  RightPanel.jsx  Sidebar.jsx
frontend/src/components/home/: About.jsx  Contact.css  Contact.jsx  Footer.css  Footer.jsx  Header.css  Header.jsx  Hero.css  Hero.jsx  Services.css  Services.jsx  Tech.css  Tech.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  SignUp.jsx  Terms.jsx
frontend/src/pages/dashboard/: Dashboard.jsx
frontend/src/pages/home/: Home.jsx
frontend/src/pages/terms/: Terms.css  Terms.jsx
frontend/src/styles/: CreatePost.css  Dashboard.css  Feed.css  JobApplicationForm.css  JobPost.css  Login.css  RightPanel.css  Sidebar.css  Signup.css  index.css  themes.css
instance/: salto_quantico.db
(+23 files in other folders)
